--- a/package.json
+++ b/package.json
@@ -11,24 +11,51 @@
     "start": "tsx examples/simple-monitor.ts",
     "dev": "tsx watch examples/simple-monitor.ts",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
-    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage"
+    "test:unit": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:integration": "tsx ./src/__tests__/connTest.ts",
+    "test:e2e": "tsx examples/simple-monitor.ts",
+    "prepublishOnly": "yarn clean && yarn build && yarn test:unit"
   },
   "dependencies": {
-    "@noble/curves": "^1.3.0",
     "@noble/hashes": "^1.3.3",
     "bech32": "^2.0.0",
     "node-fetch": "^3.3.2",
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.5",
     "@types/ws": "^8.5.10",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "tsx": "^4.7.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.3.3"
+  },
+  "jest": {
+    "preset": "ts-jest/presets/default-esm",
+    "testEnvironment": "node",
+    "extensionsToTreatAsEsm": [
+      ".ts"
+    ],
+    "moduleNameMapper": {
+      "^(\\.{1,2}/.*)\\.js$": "$1"
+    },
+    "transform": {
+      "^.+\\.tsx?$": [
+        "ts-jest",
+        {
+          "useESM": true
+        }
+      ]
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(node-fetch|data-uri-to-buffer|fetch-blob|formdata-polyfill)/)"
+    ],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.test.ts"
+    ]
   },
   "engines": {
     "node": ">=18.0.0"
